src/app/statistics/pages/statistics-page/statistics-page.component.scss
.summaries-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  padding-bottom: 1rem;

  .stat-summary-wrapper {
    padding: 0 1rem;
    width: 100%;
    height: 100%;

    .stat-summary-container {
      background-color: var(--white);
      padding: 1rem;
      display: flex;
      flex-direction: column;
      gap: 0.5rem;
      height: 100%;

      .title {
        font-weight: bold;
        font-size: 0.8rem;
      }

      .value {
        font-size: 1.5rem;
      }
    }
  }
}

.filters-section-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
  margin: 0 1rem 1rem 1rem;
  background-color: var(--white);

  .filters-container {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    background-color: var(--white);
  }
}

.statistics-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 0 1rem;

  .set-statistics-container {
    background-color: var(--white);
    padding: 1rem;
    width: 100%;

    h2 {
      padding-bottom: 1rem;
    }

    .loader-container {
      display: flex;
      justify-content: center;
      width: 100%;
      flex-direction: column;
      gap: 1rem;

      .skeleton-bar-items {
        display: flex;
        gap: 1rem;
        justify-content: flex-start;
        align-items: center;
      }
    }

    .no-data {
      text-align: center;
      font-style: italic;
      color: var(--gray-500);
    }

    .meter-descriptions {
      display: flex;
      gap: 1rem;
      flex-wrap: wrap;

      .meter-description {
        display: flex;
        align-items: center;
        gap: 0.25rem;

        .meter-color {
          width: 0.75rem;
          height: 0.75rem;
          border-radius: 50%;
        }
      }
    }
  }
}

